# obsidian_kb

./: README.md  evaluation.py  indexing.py  main.py  main1.py  pyproject.toml  rag.py
daily_notes_sample/01-January/: 2024-01-01-Monday.md  2024-01-03-Wednesday.md  2024-01-05-Friday.md  2024-01-07-Sunday.md  2024-01-09-Tuesday.md  2024-01-11-Thursday.md  2024-01-13-Saturday.md  2024-01-15-Monday.md  2024-01-17-Wednesday.md  2024-01-19-Friday.md  2024-01-21-Sunday.md  2024-01-23-Tuesday.md  2024-01-25-Thursday.md  2024-01-27-Saturday.md  2024-01-29-Monday.md
daily_notes_sample/02-February/: 2024-02-01-Thursday.md  2024-02-02-Friday.md  2024-02-03-Saturday.md  2024-02-04-Sunday.md  2024-02-05-Monday.md  2024-02-06-Tuesday.md  2024-02-07-Wednesday.md  2024-02-08-Thursday.md  2024-02-09-Friday.md  2024-02-10-Saturday.md  2024-02-11-Sunday.md  2024-02-12-Monday.md  2024-02-13-Tuesday.md  2024-02-14-Wednesday.md  2024-02-15-Thursday.md
daily_notes_sample/03-March/: 2024-03-01-Friday.md  2024-03-03-Sunday.md  2024-03-05-Tuesday.md  2024-03-07-Thursday.md  2024-03-09-Saturday.md  2024-03-11-Monday.md  2024-03-13-Wednesday.md  2024-03-15-Friday.md  2024-03-17-Sunday.md  2024-03-19-Tuesday.md  2024-03-21-Thursday.md  2024-03-23-Saturday.md  2024-03-25-Monday.md  2024-03-27-Wednesday.md  2024-03-29-Friday.md
daily_notes_sample/04-April/: 2024-04-01-Monday.md  2024-04-03-Wednesday.md  2024-04-05-Friday.md  2024-04-07-Sunday.md  2024-04-09-Tuesday.md  (+10 more)
libs/: __init__.py  _bq_sql_record_manager.py  custom_multiquery_retriever.py  custom_selfquery_retriever.py
(+45 files in other folders)
